# jack-cli

./: FUNCMAP.md  HANDOFF.md  README.md  onboarding.sh  pyproject.toml  requirements.txt  test_cli.sh  test_live.sh
docs/: db_survey.py  db_survey.sql  db_survey_result.txt  db_survey_v2.py  db_survey_v2_result.txt  debug_audit_result.txt  debug_long_queries_result.txt  jackhsu.sh  jackhsu_demo.sh  postcheck.sh  v0.2.0_requirements.md  v0.2.0_tasks.md
jackcli/: __init__.py  bedrock.py  config.py  connection.py  main.py  output.py  queries.py
