[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jackcli"
version = "0.1.0"
description = "Redshift AI-Native Operations CLI — wraps common DBA maintenance queries into a human-friendly and AI-parseable interface."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "rich>=13",
    "tenacity>=8",
]

[project.scripts]
jack = "jackcli.main:app"

[tool.setuptools.packages.find]
where = ["."]
